--- a/scss/1-modules/_footer.scss
+++ b/scss/1-modules/_footer.scss
@@ -17,21 +17,36 @@ footer {
         left: 0;
         right: 0;
         top: -70px;
+        @media (max-width: $break-sm) {
+            flex-wrap: wrap;
+            padding: 12px;
+            width: 90%;
+        }
 
         .frenchise_content {
             flex-basis: 70%;
             width: 70%;
+            @media (max-width: $break-sm) {
+                flex-basis: 100%;
+                width: 100%;
+            }
             h3 {
                 color: rgb(16, 18, 23);
                 font-size: 20px;
                 font-weight: 700;
                 margin: 10px 0px;
+                @media (max-width: $break-sm) {
+                    font-size: 14px;
+                }
             }
             p {
                 font-size: 16px;
                 line-height: 1.17;
                 color: rgb(32, 44, 96);
                 margin-bottom: 8px;
+                @media (max-width: $break-sm) {
+                    font-size: 14px;
+                }
             }
         }
         .frenchise_cta {
@@ -44,6 +59,10 @@ footer {
             color: $black;
             text-decoration: none;
             cursor: pointer;
+            @media (max-width: $break-sm) {
+                font-size: 12px;
+                padding: 7px 28px;
+            }
         }
     }
 
@@ -53,6 +72,10 @@ footer {
         justify-content: space-between;
         margin-top: 90px;
         border-bottom: 1px solid #ccc;
+        @media (max-width: $break-sm) {
+            flex-wrap: wrap;
+            margin-top: 40px;
+        }
         .quick_links_wrapper {
             flex-basis: 50%;
             width: 50%;
@@ -60,6 +83,14 @@ footer {
             padding: 0px 50px 0px 0px;
             max-height: 190px;
             margin-bottom: 40px;
+            @media (max-width: $break-sm) {
+                padding: 0px 0px 0px 0px;
+                max-height: none;
+                flex-basis: 100%;
+                width: 100%;
+                margin-bottom: 0;
+                border-right: none;
+            }
             .quick_link_container {
                 display: flex;
                 justify-content: space-between;
@@ -105,6 +136,12 @@ footer {
             flex-basis: 50%;
             width: 50%;
             padding: 0px 40px 40px 40px;
+            @media (max-width: $break-sm) {
+                flex-basis: 100%;
+                width: 100%;
+                padding: 0;
+                display: none;
+            }
             .app_heading {
                 font-size: 26px;
                 color: rgb(255, 255, 255);
@@ -123,7 +160,7 @@ footer {
                         border: 1px solid #ced4da;
                         color: #fff;
                         font-size: $font-16;
-                        &::placeholder{
+                        &::placeholder {
                             color: $white;
                             font-size: $font-16;
                         }
@@ -144,8 +181,8 @@ footer {
                         margin-top: 30px;
                     }
                 }
-                .qr_code{
-                    p{
+                .qr_code {
+                    p {
                         color: $white;
                         padding: 0px 0px 10px 0;
                     }
@@ -178,6 +215,9 @@ footer {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        @media (max-width: $break-sm) {
+            flex-wrap: wrap;
+        }
         .hotel_city_list {
             p {
                 a {
