--- a/scss/2-layouts/homepage.scss
+++ b/scss/2-layouts/homepage.scss
@@ -13,6 +13,7 @@
     padding: 50px 0px;
     @media (max-width: $break-sm) {
         overflow-x: scroll;
+        justify-content: flex-start;
     }
     .box {
         position: relative;
@@ -24,8 +25,8 @@
         flex-basis: 28.66%;
         width: 28.66%;
         @media (max-width: $break-sm) {
-            flex-basis: 25% !important;
-            width: 25% !important;
+            flex: 0 0 300px;
+            width: 300px;
         }
         h3 {
             font-size: 20px;
@@ -43,8 +44,8 @@
             flex-basis: 14%;
             width: 14%;
             @media (max-width: $break-sm) {
-                flex-basis: 25% !important;
-                width: 25% !important;
+                flex: 0 0 300px;
+                width: 300px;
             }
             img {
                 position: relative;
@@ -146,6 +147,9 @@
     justify-content: center;
     align-items: center;
     padding: 20px;
+    @media (min-width: $break-sm-2) and (max-width: $break-md) {
+        padding: 40px 10px;
+    }
     .deal_section {
         padding-right: 60px;
         @media (max-width: $break-sm) {
@@ -281,6 +285,9 @@
     @media (max-width: $break-sm) {
         padding: 50px 0px;
     }
+    @media (min-width: $break-sm-2) and (max-width: $break-md) {
+        padding: 30px;
+    }
     .offer_inside_wrapper {
         display: flex;
         justify-content: space-between;
@@ -293,11 +300,18 @@
                 flex-basis: 100%;
                 width: 100%;
             }
+            @media (min-width: $break-sm-2) and (max-width: $break-md) {
+                flex-basis: 100%;
+                width: 100%;
+            }
             img {
                 width: 100%;
                 border-radius: 25px;
                 height: 200px;
                 @media (max-width: $break-sm) {
+                    height: auto;
+                }
+                @media (min-width: $break-sm-2) and (max-width: $break-md) {
                     height: auto;
                 }
                 object-fit: cover;
@@ -311,6 +325,11 @@
                 width: 100%;
                 margin-top: 20px;
             }
+            @media (min-width: $break-sm-2) and (max-width: $break-md) {
+                flex-basis: 100%;
+                width: 100%;
+                margin-top: 20px;
+            }
             position: relative;
             .join_content {
                 position: absolute;
@@ -319,6 +338,10 @@
                 left: 13%;
                 @media (max-width: $break-sm) {
                     top: 20%;
+                    left: 6%;
+                }
+                @media (min-width: $break-sm-2) and (max-width: $break-md) {
+                    top: 21%;
                     left: 6%;
                 }
                 p {
@@ -352,6 +375,9 @@
                 @media (max-width: $break-sm) {
                     height: auto;
                 }
+                @media (min-width: $break-sm-2) and (max-width: $break-md) {
+                    height: auto;
+                }
                 object-fit: cover;
             }
         }
@@ -364,6 +390,10 @@
     @media (max-width: $break-sm) {
         margin-top: 50px;
         margin-bottom: 50px;
+    }
+    @media (min-width: $break-sm-2) and (max-width: $break-md) {
+        margin-top: 50px;
+        margin-bottom: 80px;
     }
     .area_hotel_search {
         &::before {
