--- a/scss/1-modules/_footer.scss
+++ b/scss/1-modules/_footer.scss
@@ -25,6 +25,9 @@ footer {
         @media (min-width: $break-sm-2) and (max-width: $break-md) {
             width: 90%;
         }
+        @media (min-width: $break-md-2) and (max-width: $break-md-3) {
+            width: 95%;
+        }
 
         .frenchise_content {
             flex-basis: 70%;
@@ -87,6 +90,9 @@ footer {
             flex-wrap: wrap;
             border-bottom: 1px solid #ccc;
         }
+        @media (min-width: $break-md-2) and (max-width: $break-md-3) {
+            align-items: start;
+        }
         .quick_links_wrapper {
             flex-basis: 50%;
             width: 50%;
@@ -107,11 +113,22 @@ footer {
                 width: 100%;
                 border-right: 1px solid transparent;
             }
+            @media (min-width: $break-md-2) and (max-width: $break-md-3) {
+                max-height: unset;
+            }
+            
             .quick_link_container {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
+                @media (min-width: $break-md-2) and (max-width: $break-md-3) {
+                    flex-wrap: wrap;
+                    align-items: start;
+                }
                 .quick_list {
+                    @media (min-width: $break-md-2) and (max-width: $break-md-3) {
+                        margin-top: 20px;
+                    }
                     p {
                         a {
                             font-size: $font-14;
@@ -163,6 +180,9 @@ footer {
                 width: 100%;
                 padding: 30px 0px;
             }
+            @media (min-width: $break-md-2) and (max-width: $break-md-3) {
+                padding: 0px 0px 40px 20px;
+            }
             .app_heading {
                 font-size: 26px;
                 color: rgb(255, 255, 255);
@@ -171,6 +191,9 @@ footer {
             .app_wrapper {
                 display: flex;
                 justify-content: space-between;
+                @media (min-width: $break-md-2) and (max-width: $break-md-3) {
+                    flex-wrap: wrap;
+                }
                 .form_container {
                     input {
                         height: 43px;
@@ -203,6 +226,9 @@ footer {
                     }
                 }
                 .qr_code {
+                    @media (min-width: $break-md-2) and (max-width: $break-md-3) {
+                        margin-top: 40px;
+                    }
                     p {
                         color: $white;
                         padding: 0px 0px 10px 0;
