--- a/scss/1-modules/_header.scss
+++ b/scss/1-modules/_header.scss
@@ -6,9 +6,14 @@
 	margin-right: 4%;
 	flex-wrap: wrap;
 	height: 70px;
+
 	.logo {
 		width: 30%;
 		flex-basis: 30%;
+		@media (min-width: $break-md-2) and (max-width: $break-md-3) {
+			width: 20%;
+			flex-basis: 20%;
+		}
 		img {
 			width: 81px;
 			height: 29px;
@@ -22,7 +27,10 @@
 		justify-content: flex-end;
 		align-items: center;
 		flex-wrap: wrap;
-
+		@media (min-width: $break-md-2) and (max-width: $break-md-3) {
+			width: 80%;
+			flex-basis: 80%;
+		}
 		.offer_Section {
 			width: 210px;
 			margin-right: 2%;
