--- a/scss/1-modules/_onscroll_form.scss
+++ b/scss/1-modules/_onscroll_form.scss
@@ -8,6 +8,9 @@
     top: 0;
     background: $white;
     box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.2);
+    @media(max-width: $break-sm-2){
+        display: none !important;
+    }
     input {
         height: 49px;
         border-radius: 0;
