account details page

--- a/scss/2-layouts/homepage.scss
+++ b/scss/2-layouts/homepage.scss
@@ -5,6 +5,8 @@
 @import "../1-modules/onscroll_form";
 @import "../1-modules/homepage_banner_form";
 @import "../1-modules/footer";
+@import "../1-modules/mob_menu_bottom";
+
 
 .advantage_wrapper {
     display: flex;
