--- a/scss/0-base/_base.scss
+++ b/scss/0-base/_base.scss
@@ -19,6 +19,10 @@ body {
     -moz-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     background: $white;
+
+
+    padding-bottom: 60px;
+
 }
 
 *,
@@ -82,6 +86,10 @@ a {
     text-decoration: none;
     outline: none;
 }
+
+
+
+
 
 .web_dis{
     display: block;
