--- a/scss/1-modules/_onscroll_form.scss
+++ b/scss/1-modules/_onscroll_form.scss
@@ -125,5 +125,24 @@
             font-weight: 700;
             padding: 18px;
         }
+        .btn-secondary.dropdown-toggle{
+            background: transparent;
+            border: none;
+            &:focus{
+                color: $black;
+                outline: none;
+                box-shadow: none;
+            }
+        }
+        .dropdown-menu.show{
+            margin-top: 13px;
+            width: 200px;
+            padding: 0;
+            a{
+                padding: 10px;
+                border-bottom: 1px solid #ccc;
+                font-weight: normal;
+            }
+        }
     }
 }
