--- a/scss/2-layouts/about.scss
+++ b/scss/2-layouts/about.scss
@@ -4,6 +4,7 @@
 @import "../1-modules/mob_header_home";
 @import "../1-modules/footer";
 @import "../1-modules/mob_menu_bottom";
+@import "../1-modules/bottom_banner";
 
 .top_section {
     height: 20vh;
@@ -108,61 +109,4 @@
     }
 }
 
-.about_banner {
-    background: linear-gradient(259deg, #f7fbc6, #d0e1f9 75%, #e1f2ff);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 0 0 0;
-    @media(min-width: $break-sm-2) and (max-width: $break-md){
-        padding: 20px 0 20px 0;
-    }
-    @media(max-width: 320px){
-        flex-wrap: wrap;
-        text-align: center;
-        
-    }
-    @media(min-width: 321px) and (max-width: $break-sm){
-        flex-wrap: wrap;
-        text-align: center;
-    }
-    
-    .about_img_mob {
-        background: url("../../img/fab_sprite_v19.png") -94px -2613px no-repeat;
-        width: 207px;
-        height: 227px;
-        margin-right: 40px;
-        @media(max-width: 320px){
-            margin-right: 0;
-        }
-        @media(min-width: 321px) and (max-width: $break-sm){
-            margin-right: 0;
-        }
-        @media(min-width: $break-sm-2) and (max-width: $break-md){
-            display: none;
-         }
-    }
-    .about_wrapper {
-        width: 146px;
-        margin-left: 40px;
-        background: $white;
-        text-align: center;
-        padding: 8px 0;
-        @media(max-width: 320px){
-            margin-left: 0px;
-        }
-        @media(min-width: 321px) and (max-width: $break-sm){
-            margin-left: 0px;
-        }
-        @media(min-width: $break-sm-2) and (max-width: $break-md){
-            display: none;
-         }
-        .about_qrcode {
-            background: url("../../img/fab_sprite_v19.png") 0px -2356px no-repeat;
-            width: 128px;
-            height: 128px;
 
-            display: inline-block;
-        }
-    }
-}
