--- a/scss/2-layouts/reffer_earn.scss
+++ b/scss/2-layouts/reffer_earn.scss
@@ -6,31 +6,151 @@
 @import "../1-modules/mob_menu_bottom";
 @import "../1-modules/bottom_banner";
 
-
-.reffer_container{
-    .steps_container{
+.reffer_container {
+    .steps_container {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        .box_left{
+        margin-top: 50px;
+        margin-bottom: 50px;
+        .box_left {
             display: flex;
             align-items: center;
             justify-content: space-between;
             flex: 0 0 50%;
-            .image_wrapper{
+            width: 50%;
+            .image_wrapper {
                 flex: 0 0 50%;
                 width: 50%;
-                img{
+                img {
                     width: 613px;
                 }
             }
-            .content_wrap{
-                flex: 0 0 50%;
-                width: 50%;
+            .content_wrap {
+                flex: 0 0 45%;
+                width: 45%;
+                p {
+                    &:nth-child(1) {
+                        font-size: 20px;
+                        color: #202c60;
+                        margin-bottom: 10px;
+                    }
+                    &:nth-child(2) {
+                        color: #202c60;
+                        font-size: 20px;
+                        letter-spacing: 0.3px;
+                        line-height: 1.5;
+                    }
+                    &:nth-child(3) {
+                        font-size: 24px;
+                        font-weight: 700;
+                        color: #202c60;
+                    }
+                }
             }
         }
-        .box_right{
+        .box_right {
             flex: 0 0 50%;
+            width: 50%;
+            .steps_wrapper {
+                box-shadow: 0 2px 6px 0 rgba(140, 128, 128, 0.5);
+                padding: 30px;
+                background: #fff;
+                border: solid 1px rgba(221, 221, 221, 0.65);
+                h2 {
+                    font-size: 16px;
+                    font-weight: 700;
+                    color: #202c60;
+                    padding-bottom: 30px;
+                }
+                .step_list {
+                    display: flex;
+                    align-items: center;
+                    border-bottom: solid 1px #979797;
+                    padding-bottom: 25px;
+                    margin-bottom: 25px;
+                    .image_list_container {
+                        flex: 0 0 10%;
+                        img {
+                            width: 45px;
+                        }
+                    }
+                    .content_hold {
+                        flex: 0 0 90%;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.referal_code_wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-bottom: 50px;
+    flex-wrap: wrap;
+    h2 {
+        font-size: 21px;
+        font-weight: bold;
+        color: #4a4a4a;
+    }
+    p {
+        font-size: 14px;
+        line-height: 1.14;
+        color: #9b9b9b;
+    }
+    .refreal_code {
+        flex: 0 0 50%;
+        width: 50%;
+        border-right: 1px solid #e1e1e1;
+        form {
+            margin-top: 24px;
+            margin-bottom: 10px;
+            input {
+                height: 50px;
+                color: #202c60;
+                background: #d8d8d8;
+                border: 2px solid #fff;
+                border-radius: 5px;
+                width: 40%;
+                border: 1px solid #d8d8d8;
+            }
+            .show_code_btn {
+                background: #fedd10;
+                border: 1px solid #fedd10;
+                height: 50px;
+                width: 126px;
+                color: #202c60;
+                font-size: 14px;
+                font-weight: bold;
+            }
+        }
+    }
+    .social_wraper {
+        flex: 0 0 50%;
+        width: 50%;
+        padding-left: 80px;
+        .icon_container {
+            margin-top: 24px;
+            margin-bottom: 10px;
+            display: flex;
+            align-items: center;
+            a {
+                display: flex;
+                width: 50px;
+                height: 50px;
+                border-radius: 100%;
+                text-align: center;
+                padding: 6px;
+                text-decoration: none;
+                i {
+                    font-size: 38px;
+                }
+                .fa-facebook-f{
+                    padding-left: 7px;
+                }
+            }
         }
     }
 }
